--- a/templates/Registration.html
+++ b/templates/Registration.html
@@ -1,9 +1,6 @@
 {% extend "layout.html" %}
+{% block main %}
 <body>
-
-
-
-    
     <h1 class = "middle">Sign Up</h1>
     <div>
         <h2 class = "submiddle">Already a member?<a href="sign-in.html">Sign in</a></h2>
@@ -35,4 +32,5 @@
         </form>
     </div>
 </body>
+{% endblock %}
 </html>
