--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     
     <title>{% block title %}{% endblock %}</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="home.html">Roomeet</a>
@@ -20,7 +21,7 @@
           <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="registration.html">Sign Up</a>
+              <a class="nav-link" href="/Registration">Sign Up</a>
             </li>
             
             <li class="nav-item">
