--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,2 +1,61 @@
-{% extends "layout.html" %}
-{% block title %}Profile{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration</title>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+<body>
+    <div class = "container">
+        <div class="title">Registration</div>
+        <form action = "#">
+            <div class="user-details">
+                <div class="input-box">
+                    <span class="details">Full Name</span>
+                    <input type="text" placeholder = "Enter Your Name" required>
+                </div>
+                <div class="input-box">
+                    <span class="details">Username</span>
+                    <input type="text" placeholder = "Enter Username" required>
+                </div>
+                <div class="input-box">
+                    <span class="details">Email</span>
+                    <input type="text" placeholder = "Enter Your Email" required>
+                </div>
+                <div class="input-box">
+                    <span class="details">Phone Number</span>
+                    <input type="text" placeholder = "Enter Your Phone Number" required>
+                </div>
+                <div class="input-box">
+                    <span class="details">Password</span>
+                    <input type="text" placeholder = "Enter Your Phone Password" required>
+                </div>
+                <div class="input-box">
+                    <span class="details">Confirm Password</span>
+                    <input type="text" placeholder = "Confirm Password" required>
+                </div>
+            </div>
+            <div class="gender-details">
+                <span class = "gender-tittle">Gender</span>
+                <div class="category">
+                    <label for="">
+                        <span class="gender">Male</span>
+                    </label>
+                    <label for="">
+                        <span class="gender">Female</span>
+                    </label>
+                    <label for="">
+                        <span class="gender">Prefer not to say</span>
+                    </label>
+                </div>
+            </div>
+            <div class="button">
+                <input type="submit" value="Register">
+            </div>
+        </form>
+    </div>
+    
+</body>
+</html>
