--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
           <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="/Registration">Sign Up</a>
+              <a class="nav-link" href="/registration">Sign Up</a>
             </li>
             
             <li class="nav-item">
