--- a/templates/Home.html
+++ b/templates/Home.html
@@ -15,7 +15,7 @@
 
     <ul class = "list col-1">
         <li>Home</li>
-        <li><a href="registration.html">Sign Up</a></li>
+        <li><a href="/registration">Sign Up</a></li>
         <li><a href="sign-in.html">Sign in</a></li>
     </ul>
 
