--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1,38 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
-</head>
+{% block title %}
+  Sign In
+{% endblock %}
 
-<body>
+{% block main %}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-        <a class="navbar-brand" href="home.html">Roomeet</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="registration.html">Sign Up</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="sign-in.html">Sign In</a>
-            </li>
-          </ul>
-
-        </div>
-      </nav>
     
     <h1 class = "middle">Sign In</h1>
-    <h2 class = "submiddle">New member?<a href="registration.html">Sign up</a></h2>
+    <h2 class = "submiddle">New member?<a href="/registration">Sign up</a></h2>
 
     <div class = "sign-inForm">
         <form class = "col-6 mx-auto ">
@@ -56,5 +31,4 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
