--- a/templates/Registration.html
+++ b/templates/Registration.html
@@ -3,7 +3,7 @@
 
     <h1 class = "middle">Sign Up</h1>
     <div>
-        <h2 class = "submiddle">Already a member?<a href="sign-in.html">Sign in</a></h2>
+        <h2 class = "submiddle">Already a member?<a href="/sign-in">Sign in</a></h2>
     </div>
     <div class = "sign-inForm">
         <form class = "col-6 mx-auto ">
