--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<title>{% block title %}{% endblock %} - Roomeet</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 <nav>
   <h1>Roomeet</h1>
   <ul>
