--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -10,8 +10,8 @@
 {% block content %}
 
 <div>
-  <h1 class="middle">Roomeet</h1>
-  <p id = "intro">You are logged in!</p>
+  <h1>Roomeet</h1>
+  <p id = "intro">Welcome, here at Roomeets, it is our pleasure to help you search for your future roomy.</p>
 </div>
 
 {% endblock %}
