--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Roomeet</title>
+<title>{% block title %}{% endblock %}</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 <nav>
   <h1>Roomeet</h1>
