--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,21 +5,24 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
-<nav>
-  <h1>Roomeet</h1>
-  <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+  <h1 class="navbar-brand">Roomeet</h1>
+  
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      {% if g.user %}
+      <li class="nav-item"><span class = "nav-link">{{ g.user['username'] }}</span>
+      <li class = "nav-item"><a class = "nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+        
+      {% else %}
+      <li class="nav-item"><a class = "nav-link" href="{{ url_for('auth.register') }}">Register</a>
+      <li class = "nav-item"><a class = "nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+      {% endif %}
+    </ul>
+  </div>
 </nav>
-
-
-
 
 
 <section class="content">
