--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,13 +7,13 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-  <h1 class="navbar-brand">Roomeet</h1>
+  <span class="navbar-brand mb-0 h1">Roomeet</span>
   
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       {% if g.user %}
-      <li class="nav-item"><span class = "nav-link">{{ g.user['username'] }}</span>
+      <li><span class="navbar-brand mb-0 h1">{{ g.user['username'] }}</span>
       <li class = "nav-item"><a class = "nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
         
       {% else %}
