--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
+  <h1 class = "middle">{% block title %}Register{% endblock %}</h1>
+  <h2 class = "submiddle">Already a member?<a href="{{ url_for('auth.login') }}">Sign in</a></h2>
 {% endblock %}
 
 {% block content %}
-  <form method="post">
+  <form method="post" class = "col-6 mx-auto">
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <label for="email">Email</label>
