toook back some changes

--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1 class = "middle">{% block title %}Register{% endblock %}</h1>
-  <h2 class = "submiddle">Already a member?<a href="{{ url_for('auth.login') }}">Sign in</a></h2>
+  <h1 >{% block title %}Register{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
