--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,21 +1,60 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1 >{% block title %}Register{% endblock %}</h1>
+  <h1 >{% block title %}Register
+    <link rel="stylesheet" href="{{ url_for('static', filename='registration.css') }}">
+    {% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-  <form method="post" class = "col-6 mx-auto">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email" required>
-    <label for="phone">Phone</label>
-    <input type="tel" name="phone" id="phone" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <label for="cpassword">Confirm Password</label>
-    <input type="password" name="cpassword" id="cpassword" required>
-    <input type="submit" value="Register">
-  </form>
+  <div class = "container">
+    <div class="title">Registration</div>
+    <form action = "#">
+        <div class="user-details">
+            <div class="input-box">
+                <span class="details">Username</span>
+                <input type="text" placeholder = "Enter Your Username" id="username" required>
+            </div>
+            <div class="input-box">
+                <span class="details">Email</span>
+                <input type="text" placeholder = "Enter Your Email" id="email" required>
+            </div>
+            <div class="input-box">
+                <span class="details">Phone Number</span>
+                <input type="text" placeholder = "Enter Your Phone Number"  id="phone"required>
+            </div>
+            <div class="input-box">
+                <span class="details">Password</span>
+                <input type="text" placeholder = "Enter Your Phone Password"  id="password" required>
+            </div>
+            <div class="input-box">
+                <span class="details">Confirm Password</span>
+                <input type="text" placeholder = "Confirm Password" id="cpassword" required>
+            </div>
+        </div>
+        <div class="gender-details">
+            <input type="radio" name="gender" id="dot-1">
+            <input type="radio" name="gender" id="dot-2">
+            <input type="radio" name="gender" id="dot-3">
+            <span class = "gender-tittle">Gender</span>
+            <div class="category">
+                <label for="dot-1">
+                    <span class="dot one"></span>
+                    <span class="gender">Male</span>
+                </label>
+                <label for="dot-2">
+                    <span class="dot two"></span>
+                    <span class="gender">Female</span>
+                </label>
+                <label for="dot-3">
+                    <span class="dot three"></span>
+                    <span class="gender">Other</span>
+                </label>
+            </div>
+        </div>
+        <div class="button">
+            <input type="submit" value="Register">
+        </div>
+    </form>
+</div>
 {% endblock %}
