Added change account details
Can't delete account

--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -16,6 +16,7 @@
     <input type="password" name="password" id="password" required>
     <label for="cpassword">Confirm Password</label>
     <input type="password" name="cpassword" id="cpassword" required>
+    By clicking "Register", you agree to the <a href="https://docs.google.com/document/d/1Ho4h0hbFhs8piMVdtvyKe8SyvcMFHS6aTww1hdfFbxw/edit?usp=sharing">Terms and Conditions</a>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
