--- a/flaskr/templates/auth/changeaccount.html
+++ b/flaskr/templates/auth/changeaccount.html
@@ -16,4 +16,6 @@
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Change Account">
   </form>
+
+  <a href="{{ url_for('auth.delete_account') }}">Delete Account</a>
 {% endblock %}
