--- a/flaskr/templates/auth/changeaccount.html
+++ b/flaskr/templates/auth/changeaccount.html
@@ -17,5 +17,7 @@
     <input type="submit" value="Change Account">
   </form>
 
+
+  <a href="{{ url_for('auth.change_password') }}">Change Password</a>
   <a href="{{ url_for('auth.delete_account') }}">Delete Account</a>
 {% endblock %}
