--- a/flaskr/templates/roommeet/index.html
+++ b/flaskr/templates/roommeet/index.html
@@ -2,9 +2,7 @@
 
 {% block header %}
   <h1>{% block title %}Roommeet{% endblock %}</h1>
-  {% if g.user %}
-    <a class="action" href="{{ url_for('blog.create') }}">New</a>
-  {% endif %}
+
 {% endblock %}
 
 {% block content %}
@@ -12,6 +10,13 @@
 <div>
   <h1 class="middle">Roomeet</h1>
   <p id = "intro">You are logged in!</p>
+
+  {% if g.user['verified'] == 0 %}
+    <a href="{{ url_for('roommeet.create_profile') }}">Create Profile</a>
+  {% else %}
+    Welcome, USER!
+  {% endif %}
+
 </div>
 
 {% endblock %}
