--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,15 +1,21 @@
 {% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
-{% endblock %}
-
 {% block content %}
+  </form>
   <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+    <div class = "boxed">
+      <div class = "container">
+        <div class="title">Log In</div>
+        <form action = "#">
+          <label for="username">Username</label>
+          <input name="username" id="username" required>
+          <label for="password">Password</label>
+          <input type="password" name="password" id="password" required>
+            <div class="button">
+              <input type="submit" value="Log In">
+            </div>
+        </form>
+    </div>
+    </div>
   </form>
 {% endblock %}
