Better log in and registration

--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -7,10 +7,15 @@
       <div class = "container">
         <div class="title">Log In</div>
         <form action = "#">
-          <label for="username">Username</label>
-          <input name="username" id="username" required>
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" required>
+          <div class="user-details">
+            <div class="input-box">
+              <label for="username">Username</label>
+              <input name="username" id="username" placeholder = "Enter Your Username" required>
+            </div>
+            <div class="input-box">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" placeholder= "Enter your Password"required>
+            </div>
             <div class="button">
               <input type="submit" value="Log In">
             </div>
