--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>{% block title %}{% endblock %}</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <nav>
   <h1>Roomeet</h1>
   <ul>
@@ -8,6 +9,7 @@
       <li><span>{{ g.user['username'] }}</span>
       {% if g.user['verified'] == 0 %}
       <li><a href="{{ url_for('roommeet.create_profile') }}">Create Profile</a>
+      <li><a href="{{ url_for('roommeet.create_housing') }}">Create Housing</a>
       {% else %}
       <li><a href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
       <li><a href="{{ url_for('roommeet.create_housing') }}">Create Housing</a>
