--- a/flaskr/templates/housing/createhousing.html
+++ b/flaskr/templates/housing/createhousing.html
@@ -7,18 +7,23 @@
 {% block content %}
 
   <form method="post">
-    <div class="form-group" >
+    <div class="form-group">
       <label for="zipcode">Zipcode</label>
       <input type="number" class="form-control" name="zipcode" id="zipcode" required>
+    </div>
 
+    <div class="form-group"></div>
       <label for="rent">Rent</label>
       <input type="number" class="form-control" name="rent" id="rent" required>
+    </div>
 
+    <div class="form-group"></div>
       <label for="details">Any further information</label>
       <textarea class="form-control" id="details" rows="3"></textarea>
-
-      <input type="submit" class="btn btn-primary" value="Create Housing">
     </div>
+
+    <input type="submit" class="btn btn-primary" value="Create Housing">
+    
   </form>
 
 
