--- a/flaskr/templates/housing/createhousing.html
+++ b/flaskr/templates/housing/createhousing.html
@@ -6,24 +6,19 @@
 
 {% block content %}
 
-  <form method="post">
-    <div class="form-group">
+  <form method="post" class="bg-white px-4 row col-5">
+    <div>
       <label for="zipcode">Zipcode</label>
       <input type="number" class="form-control" name="zipcode" id="zipcode" required>
-    </div>
 
-    <div class="form-group"></div>
       <label for="rent">Rent</label>
       <input type="number" class="form-control" name="rent" id="rent" required>
-    </div>
 
-    <div class="form-group"></div>
       <label for="details">Any further information</label>
-      <textarea class="form-control" id="details" rows="3"></textarea>
-    </div>
+      <textarea class="form-control" id="details" name = "details" rows="3"></textarea>
 
-    <input type="submit" class="btn btn-primary" value="Create Housing">
-    
+      <input type="submit" class="btn btn-primary" value="Create Housing">
+    </div>
   </form>
 
 
