--- a/flaskr/templates/profile/createprofile.html
+++ b/flaskr/templates/profile/createprofile.html
@@ -1,18 +1,66 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Create Profile{% endblock %}</h1>
+  <h1>{% block title %}Completing Registration{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post">
-    <label for="fname">First Name</label>
-    <input name="fname" id="fname" required>
-    <label for="mname">Middle Name</label>
-    <input name="mname" id="mname">
-    <label for="lname">Last Name</label>
-    <input name="lname" id="lname" required>
-    <input type="submit" value="Create Profile">
+    <div class = "boxed">
+      <div class = "container">
+        <form action = "#">
+            <div class="user-details">
+                <div class="input-box">
+                  <label for="fname">First Name</label>
+                  <input name="fname" id="fname" required>
+                </div>
+                <div class="input-box">
+                  <label for="mname">Middle Name</label>
+                  <input name="mname" id="mname">
+                </div>
+                <div class="input-box">
+                    <label for="lname">Last Name</label>
+                    <input name="lname" id="lname" required>
+                </div>
+                <div class="gender-details">
+                  <input type="radio" name="gender" id="dot-1">
+                  <input type="radio" name="gender" id="dot-2">
+                  <input type="radio" name="gender" id="dot-3">
+                  <span class = "gender-tittle">Gender</span>
+                  <div class="category">
+                      <label for="dot-1">
+                          <span class="dot one"></span>
+                          <span class="gender">Male</span>
+                      </label>
+                      <label for="dot-2">
+                          <span class="dot two"></span>
+                          <span class="gender">Female</span>
+                      </label>
+                      <label for="dot-3">
+                          <span class="dot three"></span>
+                          <span class="gender">Other</span>
+                      </label>
+                  </div>
+              </div>
+                <div class="input-box">
+                  <label for="job">Job</label>
+                  <input name="job" id="job" required>
+                </div>
+                <div class="input-box">
+                  <label for="price">Minimum Price</label>
+                  <input name="price" id="prime" required>
+                </div>
+                <div class="input-box">
+                  <label for="city">City</label>
+                  <input name="city" id="city" required>
+                </div>
+            </div>
+            <div class="button">
+                <input type="submit" value="Register">
+            </div>
+        </form>
+    </div>
+  </div>
   </form>
 
 {% endblock %}
