--- a/flaskr/templates/housing/createhousing.html
+++ b/flaskr/templates/housing/createhousing.html
@@ -6,8 +6,11 @@
 
 {% block content %}
 
-  <form method="post" class="bg-white px-4 row col-5">
-    <div>
+  <form method="post" class=" bg-white px-4" action="">
+    
+    <div class="row col-5">
+      <h4 class="fw-bold text-center mt-3"></h4>
+
       <label for="zipcode">Zipcode</label>
       <input type="number" class="form-control" name="zipcode" id="zipcode" required>
 
