--- a/flaskr/templates/housing/createhousing.html
+++ b/flaskr/templates/housing/createhousing.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-  <form method="post" class=" bg-white px-4" action="">
+  <form method="post" class=" bg-white px-4 row col-5">
     
-    <div class="row col-5">
+    <div>
       <h4 class="fw-bold text-center mt-3"></h4>
 
       <label for="zipcode">Zipcode</label>
