--- a/flaskr/templates/housing/createhousing.html
+++ b/flaskr/templates/housing/createhousing.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  <form method="post" class=" bg-white px-4 row col-5">
+  <form method="post" class=" bg-white px-4 row col-5 mx-auto">
     
     <div>
       <h4 class="fw-bold text-center mt-3"></h4>
@@ -16,6 +16,61 @@
 
       <label for="rent">Rent</label>
       <input type="number" class="form-control" name="rent" id="rent" required>
+
+
+      <div class="gender-details">
+        <input type="radio" name="pets" id="dot-1">
+        <input type="radio" name="pets" id="dot-2">
+        <span class = "gender-tittle">Pets</span>
+        <div class="category">
+            <label for="dot-1">
+                <span class="dot one"></span>
+                <span class="pets">Yes</span>
+            </label>
+            <label for="dot-2">
+                <span class="dot two"></span>
+                <span class="pets">No</span>
+            </label>
+      </div>
+
+      <p class="fw-bold">Which of these does your housing have</p>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="wifi" />
+        <label class="form-check-label" for="wifi">
+          Wifi
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="curfew" />
+        <label class="form-check-label" for="curfew">
+          Curfew
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="laundry" />
+        <label class="form-check-label" for="laundry">
+          Laundry
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="private" />
+        <label class="form-check-label" for="private">
+          Private Room
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="parking" />
+        <label class="form-check-label" for="parking">
+          Parking
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="gym" />
+        <label class="form-check-label" for="gym">
+          Gym
+        </label>
+      </div>
+
 
       <label for="details">Any further information</label>
       <textarea class="form-control" id="details" name = "details" rows="10"></textarea>
