--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -9,7 +9,7 @@
       <form action = "#">
           <div class="user-details">
               <div class="input-box">
-                <span class="details" for="username">First Name</span>
+                <span class="details" for="username">Username</span>
                 <input name="username" id="username" placeholder = "Enter Your Username" required>
               </div>
               <div class="input-box">
