--- a/flaskr/templates/profile/changeprofile.html
+++ b/flaskr/templates/profile/changeprofile.html
@@ -12,6 +12,110 @@
     <input name="mname" id="mname" value="{{ profile['middle_name'] }}">
     <label for="lname">Last Name</label>
     <input name="lname" id="lname" value="{{ profile['last_name'] }}">
+    <label for="occupation">Occupation</label>
+    <input name="occupation" id="occupation" value="{{ profile['occupation'] }}">
+    <label for="description">Description</label>
+    <textarea name="description" id="description" value="{{ profile['occupation'] }}"></textarea>
+
+    <label for="gender">Gender:</label>
+    <select name="gender" id="gender">
+      <option value=""></option>
+      <option value="M">Male</option>
+      <option value="F">Female</option>
+      <option value="O">Other</option>
+    </select>
+
+    <label for="genderPref">Gender Preferences:</label>
+    <select name="genderPref" id="genderPref">
+      <option value=""></option>
+      <option value="M">Males Only</option>
+      <option value="F">Females Only</option>
+      <option value="C">Co-Ed</option>
+      <option value="I">Independent</option>
+    </select>
+
+    <label for="minage">Minimum Age</label>
+    <input name="minage" type="number" id="minage" value="{{ profile['ageMin'] }}">
+
+    <label for="minage">Maximum Age</label>
+    <input name="maxage" type="number" id="maxage" value="{{ profile['ageMax'] }}">
+
+    <label for="minprice">Minimum Price</label>
+    <input name="minprice" type="number" id="minprice" value="{{ profile['priceMin'] }}">
+
+    <label for="maxprice">Maximum Price</label>
+    <input name="maxprice" type="number" id="maxprice" value="{{ profile['priceMax'] }}">
+    
+    <label for="city">City</label>
+    <input name="city" id="city" value="{{ profile['city'] }}">
+
+    <label for="state">State</label>
+    <select name="state" id="state">
+      <option value="AL">AL</option>
+      <option value="AK">AK</option>
+      <option value="AR">AR</option>	
+      <option value="AZ">AZ</option>
+      <option value="CA">CA</option>
+      <option value="CO">CO</option>
+      <option value="CT">CT</option>
+      <option value="DC">DC</option>
+      <option value="DE">DE</option>
+      <option value="FL">FL</option>
+      <option value="GA">GA</option>
+      <option value="HI">HI</option>
+      <option value="IA">IA</option>	
+      <option value="ID">ID</option>
+      <option value="IL">IL</option>
+      <option value="IN">IN</option>
+      <option value="KS">KS</option>
+      <option value="KY">KY</option>
+      <option value="LA">LA</option>
+      <option value="MA">MA</option>
+      <option value="MD">MD</option>
+      <option value="ME">ME</option>
+      <option value="MI">MI</option>
+      <option value="MN">MN</option>
+      <option value="MO">MO</option>	
+      <option value="MS">MS</option>
+      <option value="MT">MT</option>
+      <option value="NC">NC</option>	
+      <option value="NE">NE</option>
+      <option value="NH">NH</option>
+      <option value="NJ">NJ</option>
+      <option value="NM">NM</option>			
+      <option value="NV">NV</option>
+      <option value="NY">NY</option>
+      <option value="ND">ND</option>
+      <option value="OH">OH</option>
+      <option value="OK">OK</option>
+      <option value="OR">OR</option>
+      <option value="PA">PA</option>
+      <option value="RI">RI</option>
+      <option value="SC">SC</option>
+      <option value="SD">SD</option>
+      <option value="TN">TN</option>
+      <option value="TX">TX</option>
+      <option value="UT">UT</option>
+      <option value="VT">VT</option>
+      <option value="VA">VA</option>
+      <option value="WA">WA</option>
+      <option value="WI">WI</option>	
+      <option value="WV">WV</option>
+      <option value="WY">WY</option>
+    </select>
+      
+    <label for="zipcode">Zipcode</label>
+    <input name="zipcode" type="number" id="zipcode" value="{{ profile['zipcode'] }}">
+
+    <label for="pets">Pets:</label>
+    <select name="pets" id="pets">
+      <option value=""></option>
+      <option value="Y">Yes</option>
+      <option value="N">No</option>
+    </select>
+ 
+
+
     <input type="submit" value="Change Profile">
   </form>
 
