--- a/flaskr/templates/profile/createprofile.html
+++ b/flaskr/templates/profile/createprofile.html
@@ -4,6 +4,8 @@
   <h1>{% block title %}Completing Registration{% endblock %}</h1>
 {% endblock %}
 
+<br>
+
 {% block content %}
   <form method="post">
     <div class = "boxed">
@@ -22,41 +24,120 @@
                     <label for="lname">Last Name</label>
                     <input name="lname" id="lname" required>
                 </div>
-                <div class="gender-details">
-                  <input type="radio" name="gender" id="dot-1">
-                  <input type="radio" name="gender" id="dot-2">
-                  <input type="radio" name="gender" id="dot-3">
-                  <span class = "gender-tittle">Gender</span>
-                  <div class="category">
-                      <label for="dot-1">
-                          <span class="dot one"></span>
-                          <span class="gender">Male</span>
-                      </label>
-                      <label for="dot-2">
-                          <span class="dot two"></span>
-                          <span class="gender">Female</span>
-                      </label>
-                      <label for="dot-3">
-                          <span class="dot three"></span>
-                          <span class="gender">Other</span>
-                      </label>
-                  </div>
-              </div>
                 <div class="input-box">
-                  <label for="job">Job</label>
-                  <input name="job" id="job" required>
+                  <label for="occupation">Occupation</label>
+                  <input name="occupation" id="occupation" required>
+                </div>
+                <label for="description">Description</label>
+                <textarea name="description" id="description"></textarea>
+
+                <label for="gender">Gender:</label>
+                <select name="gender" id="gender">
+                  <option value=""></option>
+                  <option value="M">Male</option>
+                  <option value="F">Female</option>
+                  <option value="O">Other</option>
+                </select>
+
+                <label for="genderPref">Gender Preferences:</label>
+                <select name="genderPref" id="genderPref">
+                  <option value=""></option>
+                  <option value="M">Males Only</option>
+                  <option value="F">Females Only</option>
+                  <option value="C">Co-Ed</option>
+                  <option value="I">Independent</option>
+                </select>
+
+                <div class="input-box">
+                  <label for="minage">Minimum Age</label>
+                  <input name="minage" type="number" id="minage" required>
                 </div>
                 <div class="input-box">
-                  <label for="price">Minimum Price</label>
-                  <input name="price" id="prime" required>
+                  <label for="maxage">Maximum Age</label>
+                  <input name="maxage" type="number" id="maxage" required>
                 </div>
+
+
+                <div class="input-box">
+                  <label for="minprice">Minimum Price</label>
+                  <input name="minprice" type="number" id="minprice" required>
+                </div>
+                <div class="input-box">
+                  <label for="maxprice">Maximum Price</label>
+                  <input name="maxprice" type="number" id="maxprice" required>
+                </div>
+
                 <div class="input-box">
                   <label for="city">City</label>
                   <input name="city" id="city" required>
                 </div>
+                <label for="state">State</label>
+                <select name="state" id="state">
+                  <option value="AL">AL</option>
+                  <option value="AK">AK</option>
+                  <option value="AR">AR</option>	
+                  <option value="AZ">AZ</option>
+                  <option value="CA">CA</option>
+                  <option value="CO">CO</option>
+                  <option value="CT">CT</option>
+                  <option value="DC">DC</option>
+                  <option value="DE">DE</option>
+                  <option value="FL">FL</option>
+                  <option value="GA">GA</option>
+                  <option value="HI">HI</option>
+                  <option value="IA">IA</option>	
+                  <option value="ID">ID</option>
+                  <option value="IL">IL</option>
+                  <option value="IN">IN</option>
+                  <option value="KS">KS</option>
+                  <option value="KY">KY</option>
+                  <option value="LA">LA</option>
+                  <option value="MA">MA</option>
+                  <option value="MD">MD</option>
+                  <option value="ME">ME</option>
+                  <option value="MI">MI</option>
+                  <option value="MN">MN</option>
+                  <option value="MO">MO</option>	
+                  <option value="MS">MS</option>
+                  <option value="MT">MT</option>
+                  <option value="NC">NC</option>	
+                  <option value="NE">NE</option>
+                  <option value="NH">NH</option>
+                  <option value="NJ">NJ</option>
+                  <option value="NM">NM</option>			
+                  <option value="NV">NV</option>
+                  <option value="NY">NY</option>
+                  <option value="ND">ND</option>
+                  <option value="OH">OH</option>
+                  <option value="OK">OK</option>
+                  <option value="OR">OR</option>
+                  <option value="PA">PA</option>
+                  <option value="RI">RI</option>
+                  <option value="SC">SC</option>
+                  <option value="SD">SD</option>
+                  <option value="TN">TN</option>
+                  <option value="TX">TX</option>
+                  <option value="UT">UT</option>
+                  <option value="VT">VT</option>
+                  <option value="VA">VA</option>
+                  <option value="WA">WA</option>
+                  <option value="WI">WI</option>	
+                  <option value="WV">WV</option>
+                  <option value="WY">WY</option>
+                </select>
+                <div class="input-box">
+                  <label for="zipcode">Zipcode</label>
+                  <input name="zipcode" type="number" id="zipcode" required>
+                </div>
+                <label for="pets">Pets:</label>
+                <select name="pets" id="pets">
+                  <option value=""></option>
+                  <option value="Y">Yes</option>
+                  <option value="N">No</option>
+                </select>
             </div>
             <div class="button">
-                <input type="submit" value="Register">
+                <input type="submit" value="Create Profile">
             </div>
         </form>
     </div>
