Fixed profiles and fields. Please do CSS

--- a/flaskr/templates/auth/deleteaccount.html
+++ b/flaskr/templates/auth/deleteaccount.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
+<h1>Register</h1>
+
   <form method="post">
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
