--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -11,6 +11,7 @@
       {% else %}
       <li><a href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
       <li><a href="{{ url_for('roommeet.view_profile', profid=(g.user['id'])) }}">View Profile</a>
+      <li><a href="{{ url_for('housing.housings') }}">Your Housings</a>
 
       {% endif %}
       <li><a href="{{ url_for('auth.change_account') }}">Account Settings</a>
