Database got closed

--- a/flaskr/templates/housing/housings.html
+++ b/flaskr/templates/housing/housings.html
@@ -13,6 +13,6 @@
 {% endfor %}
 
 
-<a href="{{ url_for('housing.create_housing') }}">Complete Profile</a>
+<a href="{{ url_for('housing.create_housing') }}">Create Housing Listing</a>
 
 {% endblock %}
