change password and profile

--- a/flaskr/templates/auth/changepassword.html
+++ b/flaskr/templates/auth/changepassword.html
@@ -1,19 +1,27 @@
 {% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Change Password{% endblock %}</h1>
-{% endblock %}
-
 {% block content %}
   <form method="post">
-    <label for="oldpass">Old Password</label>
-    <input type="password" name="oldpass" id="oldpass" required>
-    <label for="newpass">New Password</label>
-    <input type="password" name="newpass" id="newpass" required>
-    <label for="newpassc">Confirm New Password</label>
-    <input type="password" name="newpassc" id="newpassc" required>
+    
     
     <input type="submit" value="Create New Password">
   </form>
-
+  <form method="post">
+    <div class="boxed">
+      <div class="container">
+        <div class= "user-details">
+          <div class = "input-box">
+            <h1>Change Password</h1>
+            <label for="oldpass">Old Password</label>
+            <input type="password" name="oldpass" id="oldpass" required>
+            <label for="newpass">New Password</label>
+            <input type="password" name="newpass" id="newpass" required>
+            <label for="newpassc">Confirm New Password</label>
+            <input type="password" name="newpassc" id="newpassc" required>
+          </div>
+          <input type="submit" value="Change Account">
+        <div>
+      <div>
+    </div>
+  </form>
 {% endblock %}
