--- a/flaskr/templates/profile/createprofile.html
+++ b/flaskr/templates/profile/createprofile.html
@@ -25,8 +25,8 @@
             <input name="lname" id="lname" required>
           </div>
 
-          <div >
-            <label for="photo" class = "details">Photo</label>
+          <div>
+            <label for="photo">Photo</label>
             <input type="file" id="photo" name="photo" accept="image/*" required>
           </div>
 
