--- a/flaskr/templates/housing/viewhousing.html
+++ b/flaskr/templates/housing/viewhousing.html
@@ -2,13 +2,17 @@
 
 
 {% block content %}
-<a href="{{ url_for('roommeet.view_profile', profid=(housing['poster_id'])) }}">View Post Owner</a>
+<a href="{{ url_for('algorithm.match_profile', profid=(housing['poster_id'])) }}">View Post Owner</a>
 <br>
 {{housing['street'] }}
 <br>
 <image src="{{ url_for('static', filename=photopath ) }}" ></image>
 <br>
+
+{% if g.user['id'] == housing['poster_id'] %}
 <a href="{{ url_for('housing.change_housing', houseid=(housing['housing_id'])) }}">Change Housing</a>
+<a href="{{ url_for('algorithm.houseselectors', id=(housing['housing_id'])) }}">View Selectors</a>
+{% endif %}
 
 
 {% endblock %}
