--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -13,6 +13,7 @@
       <li><a href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
       <li><a href="{{ url_for('roommeet.view_profile', profid=(g.user['id'])) }}">View Profile</a>
       <li><a href="{{ url_for('housing.housings') }}">Your Housings</a>
+      <li><a href="{{ url_for('algorithm.houseselections') }}">Your House Selections</a>
       <li><a href="{{ url_for('algorithm.selections') }}">Your Selections</a>
       <li><a href="{{ url_for('algorithm.matches') }}">Your Matchings</a>
       {% endif %}
