--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -2,11 +2,10 @@
 
 {% block content %}
 
-
-  <form method="post">
-    <div class="boxed">
+    <div class="boxed mt-6">
       <div class="container">
         <div class= "user-details">
+          <form method="post">
           
           <h1>Registration</h1>
 
@@ -36,8 +35,9 @@
           </div>
           
           <input type="submit" value="Register">
+        </form>
         </div>
       </div>
     </div>
-  </form>
+
 {% endblock %}
