--- a/flaskr/templates/profile/createprofile.html
+++ b/flaskr/templates/profile/createprofile.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-  <div class="boxed">
+  <div class="boxed mt-2">
     <div class="container">
       <div class= "user-details">
         <form method="post" enctype = "multipart/form-data">
