--- a/flaskr/templates/algorithm/selectmatch.html
+++ b/flaskr/templates/algorithm/selectmatch.html
@@ -5,7 +5,7 @@
 
 {{ profile['first_name'] }} {{ profile['middle_name'] }} {{ profile['last_name'] }}
 <br>
-<image src="{{ url_for('static', filename=photopath ) }}" ></image>
+<img src="{{ url_for('static', filename=photopath ) }}" ></img>
 <br>
 {{ profile['occupation']}}
 
