--- a/flaskr/templates/algorithm/house.html
+++ b/flaskr/templates/algorithm/house.html
@@ -5,7 +5,7 @@
 
 
 <br>
-<image src="{{ url_for('static', filename=photopath ) }}" ></image>
+<img src="{{ url_for('static', filename=photopath ) }}" ></img>
 <br>
 
 {{ housing['street'] }} {{ housing['city'] }} {{ housing['zipcode'] }}
