More changes to come

--- a/flaskr/templates/profile/viewprofile.html
+++ b/flaskr/templates/profile/viewprofile.html
@@ -12,6 +12,7 @@
             <h2>Occupation:</h2>{{ profile['occupation']}}
             <h3>Age:</h3> {{ age }} 
         </div>
+        <a class="nav-link" href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
     </div>
 </div>
 
