--- a/flaskr/templates/profile/viewprofile.html
+++ b/flaskr/templates/profile/viewprofile.html
@@ -4,15 +4,15 @@
 {% block content %}
 <div class="boxed">
     <div class="container">
-        <div class= "user-details">
-            <h1>{{ profile['first_name'] }} {{ profile['middle_name'] }} {{ profile['last_name'] }}</h1>
-            <br>
-            <img src="{{ url_for('static', filename=photopath ) }}" ><img>
-            <br>
-            <h2>Occupation:</h2>{{ profile['occupation']}}
-            <h3>Age:</h3> {{ age }} 
-        </div>
-        <a class="nav-link" href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
+            <div class= "user-details">
+                    <h1>{{ profile['first_name'] }} {{ profile['middle_name'] }} {{ profile['last_name'] }}</h1>
+                    <br>
+                        <img src="{{ url_for('static', filename=photopath ) }}" ></img>
+                    <br>
+                    <h2>Occupation:</h2>{{ profile['occupation']}}
+                    <h3>Age:</h3> {{ age }} 
+                    <a class="nav-link" href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
+            </div>
     </div>
 </div>
 
