--- a/flaskr/templates/algorithm/profile.html
+++ b/flaskr/templates/algorithm/profile.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div class="boxed">
+<!-- <div class="boxed">
     <div class="container">
         <div class= "user-details">
             <h1>{{ profile['first_name'] }} {{ profile['middle_name'] }} {{ profile['last_name'] }}</h1>
@@ -17,7 +17,42 @@
             <a href="{{ url_for('algorithm.matchlike', id=(profile['user_id']), liketype=1) }}">Like</a>
         </div>
     </div>
+</div> -->
+
+
+<div class ="boxed">
+    <div class="flip-card">
+        <div class="flip-card-inner">
+            <div class="flip-card-front">
+                    
+                <img alt="Avatar" src="{{ url_for('static', filename=photopath ) }}" ></img>
+            </div>
+            <div class="flip-card-back">
+                <p>
+                    <h1>{{ profile['first_name'] }} {{ profile['middle_name'] }} {{ profile['last_name'] }}</h1>
+                    <h2>Occupation:</h2>{{ profile['occupation']}}
+                    <h3>Age:</h3> {{ age }} 
+
+                    <h4>Description</h4>
+                    {{profile['description']}}
+                </p>
+                
+
+                
+
+            </div>
+        </div>
+    </div>
+
+    
+    
 </div>
+
+<div class = "ignore-like">
+    <a class="btn btn-info" href="{{ url_for('algorithm.matchlike', id=(profile['user_id']), liketype=0 ) }}">Ignore</a>
+    <a class="btn btn-info" href="{{ url_for('algorithm.matchlike', id=(profile['user_id']), liketype=1) }}">Like</a>
+</div>
+
 
 
 
