--- a/flaskr/templates/roommeet/index.html
+++ b/flaskr/templates/roommeet/index.html
@@ -3,15 +3,15 @@
 
 {% block content %}
 
-<div>
-  <p id = "intro">You are logged in!</p>
+<div class ="text-center">
+  <p id = "intro" class ="text-center mx-auto">You are logged in!</p>
 
   {% if g.user['verified'] == 0 %}
     <a href="{{ url_for('roommeet.create_profile') }}">Create Profile</a>
   {% else %}
-  <a href="{{ url_for('algorithm.matchlike', id=0, liketype=0 ) }}">Start Matching People</a>
+  <a class="btn btn-info my-3" href="{{ url_for('algorithm.matchlike', id=0, liketype=0 ) }}">Start Matching People</a>
   <br>
-  <a href="{{ url_for('algorithm.houselike', id=0, liketype=0 ) }}">Start Matching Houses</a>
+  <a class="btn btn-info" href="{{ url_for('algorithm.houselike', id=0, liketype=0 ) }}">Start Matching Houses</a>
   {% endif %}
 
 </div>
