--- a/flaskr/templates/auth/changeaccount.html
+++ b/flaskr/templates/auth/changeaccount.html
@@ -21,8 +21,8 @@
         <div>
       <div>
     </div>
-  </form>
-
-  <a href="{{ url_for('auth.change_password') }}">Change Password</a>
-  <a href="{{ url_for('auth.delete_account') }}">Delete Account</a>
+  </form>  
+  <a href="{{ url_for('auth.change_password') }}">Change Password</a> &nbsp;     
+  <a href="{{ url_for('auth.delete_account') }}">Delete Account</a> &nbsp; 
+  <a href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
 {% endblock %}
